fix: [CDS-70833]: stage name overlap fix in execution console view (#16143)

--- a/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionLogView/StageSelection/StageSelection.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionLogView/StageSelection/StageSelection.module.scss
@@ -55,7 +55,7 @@
     gap: var(--spacing-3);
 
     & > div:first-child {
-      flex: 1 0 auto;
+      flex: 1 1 auto;
     }
   }
 
